Cambio de proyecto analytics

--- a/src/app/guudcomponents/footer/footer.component.html
+++ b/src/app/guudcomponents/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div style="position: relative;background-color: #f8f8f8;">
   <div class="row" style="margin:0;">
-    <div class="col-sm-12 col-md-6"><div class="rights">GUUD&#174; 2023 <span class="separator"></span> <span i18n>All rights reserved</span><span class="separator"></span> <span i18n>Notice of Pricacy</span></div></div>
+    <div class="col-sm-12 col-md-6"><div class="rights">GUUD&#174; 2023 <span class="separator"></span> <span i18n>All rights reserved</span><span class="separator"></span> <span i18n>Notice of Privacy</span></div></div>
     <div class="col-sm-12 col-md-6">
       <div class="row" style="white-space: nowrap;font-weight:bold;color:#1B4544;line-height: 4rem;">
         <div class="col-sm-12 col-md-3 col-lg-3 offset-md-0 offset-lg-3">Descarga la app:</div>
