--- a/src/app/guudcomponents/menu/burguermenu/burguermenu.component.html
+++ b/src/app/guudcomponents/menu/burguermenu/burguermenu.component.html
@@ -5,18 +5,18 @@
     <img alt="close" class="burgertoggler" id="closeburguer" src="assets/logos_icons/close.webp" width="25" height="25">
   </label>
   <div id="burgerdisplay">
-    <div class="whitedecoration"></div>
+    <!--div class="whitedecoration"></div-->
     <ul class="top">
+      <li [routerLink]="'/'" (click)="_menuOpened=false;" i18n>Home</li>
       <li [routerLink]="'/aboutus'" (click)="_menuOpened=false;" i18n>About us</li>
       <li [routerLink]="'/history'" (click)="_menuOpened=false;" i18n>History</li>
       <li [routerLink]="'/caring'" (click)="_menuOpened=false;" i18n>Caring & giving</li>
       <li [routerLink]="'/guudideas'" (click)="_menuOpened=false;" i18n>Ideas</li>
-      <li [routerLink]="'/'" (click)="_menuOpened=false;" i18n>Home</li>
     </ul>
     <ul class="bottom">
       <!--li i18n>Want to be...</li-->
-      <li [routerLink]="'/coach'" (click)="_menuOpened=false;" i18n>Coach</li>
       <li [routerLink]="'/supplier'" (click)="_menuOpened=false;" i18n>Supplier</li>
+      <li [routerLink]="'/coach'" (click)="_menuOpened=false;" i18n>Coach</li>
     </ul>
   </div>
 </div>
