--- a/src/app/guudcomponents/menu/topbar/topbar.component.scss
+++ b/src/app/guudcomponents/menu/topbar/topbar.component.scss
@@ -1,8 +1,8 @@
 .logo {
   position: absolute;
-  top: 0rem;
+  top: 0.75rem;
   left: 2.2rem;
-  height: 100%;
+  height: 2rem;
   object-fit: contain;
 }
 
@@ -37,6 +37,9 @@
   position: relative;
   text-align: center;
   height: 6vh;
+  .webdisplay:hover{
+    cursor: pointer;
+  }
   .activeElement {
     color: #68E242;
     //font-weight: bold;
