--- a/src/app/views/aboutus/aboutus.component.html
+++ b/src/app/views/aboutus/aboutus.component.html
@@ -14,17 +14,17 @@
       <div class="col-12 col-md-4">
         <img alt="iconMission" src="assets/logos_icons/Mission.webp" class="svgic" width="80" height="80">
         <h3 i18n>Mission:</h3>
-        <h5 i18n>Hack your brain + shape your body</h5>
+        <h5 i18n style="line-height: 1.6rem;">Hack your brain<br>+<br>shape your body</h5>
       </div>
       <div class="col-12 col-md-4">
         <img alt="iconVision" src="assets/logos_icons/Visión.webp" class="svgic" width="110" height="110" style="margin-bottom: -1.9rem;">
         <h3 i18n>Vision:</h3>
-        <h5 i18n>Let's find the Guud in YOU. Let's Go!</h5>
+        <h5 i18n style="line-height: 2rem;">Let's find the Guud in YOU.<br>Let's Go!</h5>
       </div>
       <div class="col-12 col-md-4">
         <img alt="iconCoreValues" src="assets/logos_icons/Core Values.webp" class="svgic" width="80" height="80">
         <h3 i18n>Core values:</h3>
-        <h5 i18n>Passion, Innovation & Fun</h5>
+        <h5 i18n style="line-height: 1.6rem;">Passion & Innovation</h5>
       </div>
     </div>
     <div class="row">
