--- a/src/app/views/caring/caring.component.html
+++ b/src/app/views/caring/caring.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-12">
         <br><br>
-        <h6 i18n style="font-size: 4.8rem;margin-bottom: 3.2rem;">We believe that in-order to create a GUUD world,</h6>
+        <h6 i18n style="font-size: 4.8rem;margin-bottom: 3.2rem;">In order to create a GUUD world,</h6>
         <h4 i18n>the first step is helping educate and form GUUD human beings</h4>
       </div>
     </div>
