--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -11,7 +11,7 @@
   </div>
 </div -->
 
-<div [ngClass]="{'displayshadow':_apply}" style="background-color: #70707094;">
+<div [ngClass]="{'displayshadow':_apply}" style="background-color: #70707094; height:110vh;">
   <img alt="play button" src="assets/logos_icons/playbtn.webp" alt="" class="playbutton" width="100" height="900">
   <div class="coachbanner m-auto">
     <img src="assets/logos_icons/Coach-Woman.webp" alt="GUUD Model" id="model">
