Ajustes en topbar generales

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<guud-topbar></guud-topbar>
+<guud-topbar [currentRoute]="currentRoute"></guud-topbar>
 <router-outlet></router-outlet>
 <guud-footer></guud-footer>
 <guudapp-modales></guudapp-modales>
