--- a/src/app/guudcomponents/menu/topbar/topbar.component.html
+++ b/src/app/guudcomponents/menu/topbar/topbar.component.html
@@ -4,7 +4,7 @@
       <div class="row navigation">
 
         <div class="col-2" style="background-color:#fff;">
-          <img [routerLink]="'/'" src="assets/logos_icons/logo-Guud.webp" width="160" height="80" alt="Logo" class="logo" i18n-alt i18n-src>
+          <img [routerLink]="'/'" src="assets/logos_icons/logo-Guud.webp" width="160" height="80" alt="Logo" class="logo" i18n-alt i18n-src *ngIf="currentRoute!='/'">
         </div>
         <div class="col-1 webdisplay" routerLinkActive="activeElement" routerLink="/aboutus" style="background-color:#fff;"><span i18n>About us</span></div>
         <div class="col-1 webdisplay" routerLinkActive="activeElement" routerLink="/history" style="background-color:#fff;"><span i18n>History</span></div>
@@ -33,7 +33,7 @@
         <div class="col-8 mobdisplay" style="background-color:#fff;"></div>
         <div class="col-2" style="background-color:#fff;">
           <guud-burguermenu></guud-burguermenu>
-          <guud-langmenu class="webdisplay"></guud-langmenu>
+          <guud-langmenu></guud-langmenu>
         </div>
 
       </div>
