Observaciones Correo Ivan

--- a/src/app/guudcomponents/formularios/besupplier/besupplier.component.html
+++ b/src/app/guudcomponents/formularios/besupplier/besupplier.component.html
@@ -1,7 +1,12 @@
 <form class="guudform" #formData="ngForm">
   <div class="row" style="margin-bottom: 2rem;">
     <div class="col-12">
-      <h2 i18n>Supplier</h2>
+      <div style="position:relative;">
+        <img alt="GUUD Supplier" class="headericon" src="assets/images/Guud-Supplier-icon.webp" alt="" width="700" height="870">
+        <h2 i18n>
+          Supplier
+        </h2>
+      </div>
       <div class="h7" style="text-align:center;" i18n>We offer the best in the world! Tell us in less than a minute why your product is the best.<br>(You can send all the videos you want)</div>
     </div>
   </div>
