--- a/src/app/views/caring/caring.component.html
+++ b/src/app/views/caring/caring.component.html
@@ -1,11 +1,11 @@
 <div class="displayshadow" style="height:unset;">
   <div class="display col-11 col-lg-10 col-xl-9 col-xxl-8 m-auto">
 <br>
-    <div class="row">
+    <div class="row" style="margin-bottom: -2rem;">
       <div class="col-12">
         <br><br>
-        <h6 i18n style="font-size: 4.8rem;margin-bottom: 3.2rem;">In order to create a GUUD world,</h6>
-        <h4 i18n>the first step is helping educate and form GUUD human beings</h4>
+        <h6 i18n style="font-size: 4.8rem;margin-bottom: 3.2rem;line-height: 4.1rem;">In order to Create a GUUD world,</h6>
+        <h4 i18n style="line-height: 2.8rem;">the first step is helping educate and form GUUD human beings</h4>
       </div>
     </div>
 
