--- a/src/assets/guudstyles/_fonts.scss
+++ b/src/assets/guudstyles/_fonts.scss
@@ -12,6 +12,8 @@ h2 {
   font-family: $mainfont;
   color: $gray-font;
   text-align: center;
+  position: relative;
+  margin: 1rem 0 2rem;
 }
 
 h3 {
