--- a/src/assets/guudstyles/guudstyles.scss
+++ b/src/assets/guudstyles/guudstyles.scss
@@ -24,6 +24,15 @@
   }
 }
 
+.headericon {
+  object-fit: contain;
+  width: 7rem;
+  height: 7rem;
+  position: absolute;
+  left: 3rem;
+  bottom: -0.9rem;
+}
+
 .displayshadow {
   box-shadow: inset 0 10px 100px $shadowcolor, inset 0 0 100px $shadowcolor;
   margin-top: 1.7rem;
