--- a/src/app/views/aboutus/aboutus.component.html
+++ b/src/app/views/aboutus/aboutus.component.html
@@ -4,10 +4,10 @@
     <div class="row">
       <div class="col-12">
         <h1 i18n>We are GUUD people,</h1>
-        <h4 i18n>gathering the best knowledge for human well-being.</h4>
+        <h4 i18n style="line-height: 2.7rem;">gathering the best knowledge for human well-being.</h4>
         <h4 i18n><img class="inputdeco" src="assets/logos_icons/Arrow.webp" alt="clip" width="60" height="60"> The secrets of your future are hidden in your daily habits.</h4>
         <br>
-        <h4 i18n>0ur purpose: <br><br> is create wellness and happiness around the world!</h4>
+        <h4 i18n style="line-height: 2.7rem;"><div style="font-size: 3rem;display: inline;left: 0.05rem;position: relative;bottom: -0.2rem;">0</div>ur purpose: <br> is create wellness and happiness around the world!</h4>
       </div>
     </div>
     <div class="icons row">
@@ -28,8 +28,8 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-8 m-auto">
-        <h3 i18n style="text-align: center;">
+      <div class="col-10 m-auto">
+        <h3 i18n style="text-align: center;font-size: 18vw;">
           Ps: be GUUD!
         </h3>
       </div>
