--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -11,8 +11,10 @@
   </div>
 </div -->
 
-<div [ngClass]="{'displayshadow':_apply}" style="background-color: #70707094; height:110vh;">
-  <img alt="play button" src="assets/logos_icons/playbtn.webp" alt="" class="playbutton" width="100" height="900">
+<div [ngClass]="{'displayshadow':_apply}" style="background-color: #70707094; min-height: 89.8vh;">
+  <div class="guudvideo">
+    <video id="videoplayerhistory" class="videoPlayer azuremediaplayer amp-default-skin" width="innerWidth" height="innerHeight"></video>
+  </div>
   <div class="coachbanner m-auto">
     <img src="assets/logos_icons/Coach-Woman.webp" alt="GUUD Model" id="model">
     <img src="assets/logos_icons/Cell-Coach.webp" alt="APP Coaches" id="app">
