--- a/src/app/views/coach/coach.component.scss
+++ b/src/app/views/coach/coach.component.scss
@@ -1,13 +1,15 @@
 
 .coachbanner {
-  position: relative;
-  bottom: 17rem;
+  position: absolute;
+  bottom: 7rem;
   width: 90%;
   height: 20vh;
   background-color: #000000;
   border-radius: 1.5rem;
   padding: 1rem;
   overflow: hidden;
+  left: 5%;
+  z-index: 2;
 
   #model {
     height: 35vh;
