--- a/src/app/views/history/history.component.html
+++ b/src/app/views/history/history.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{'displayshadow':_apply}" style="background-color: #70707094;">
+<div [ngClass]="{'displayshadow':_apply}" style="background-color: #70707094;min-height: 90vh;">
 
   <div class="guudvideo">
     <video id="videoplayerhistory" class="videoPlayer azuremediaplayer amp-default-skin" width="innerWidth" height="innerHeight"></video>
