--- a/src/app/guudcomponents/footer/footer.component.html
+++ b/src/app/guudcomponents/footer/footer.component.html
@@ -4,8 +4,8 @@
     <div class="col-sm-12 col-md-6">
       <div class="row" style="white-space: nowrap;font-weight:bold;color:#1B4544;line-height: 4rem;">
         <div class="col-sm-12 col-md-3 col-lg-3 offset-md-0 offset-lg-3">Descarga la app:</div>
-        <div class="col-sm-6 col-md-4 col-lg-3"><img src="assets/logos_icons/AppStore.webp" alt="App Store" style="height: 3rem;"></div>
-        <div class="col-sm-6 col-md-4 col-lg-3"><img src="assets/logos_icons/Google-Play.webp" alt="Play Store" style="height: 3rem;"></div>
+        <div class="col-sm-6 col-md-4 col-lg-3"><a href="https://apps.apple.com/us/app/guud/id1592139422"><img src="assets/logos_icons/AppStore.webp" alt="App Store" style="height: 3rem;width: 11.4rem;"></a></div>
+        <div class="col-sm-6 col-md-4 col-lg-3"><a href="https://play.google.com/store/apps/details?id=com.garsaholding.guud"><img src="assets/logos_icons/Google-Play.webp" alt="Play Store" style="height: 3rem;width: 9.8rem;"></a></div>
       </div>
     </div>
   </div>
