--- a/src/app/guudcomponents/menu/topbar/topbar.component.scss
+++ b/src/app/guudcomponents/menu/topbar/topbar.component.scss
@@ -34,7 +34,7 @@
 
 .navigation {
   list-style: none;
-  background-color: #f8f8f8;
+  //background-color: #f8f8f8;
   position: relative;
   text-align: center;
   height: 6vh;
