--- a/src/app/views/aboutus/aboutus.component.html
+++ b/src/app/views/aboutus/aboutus.component.html
@@ -6,8 +6,7 @@
         <h1 i18n>We are GUUD people,</h1>
         <h4 i18n style="line-height: 2.7rem;">gathering the best knowledge for human well-being.</h4>
         <h4 i18n><img class="inputdeco" src="assets/logos_icons/Arrow.webp" alt="clip" width="60" height="60"> The secrets of your future are hidden in your daily habits.</h4>
-        <br>
-        <h4 i18n style="line-height: 2.7rem;"><div style="font-size: 3rem;display: inline;left: 0.05rem;position: relative;bottom: -0.2rem;">0</div>ur purpose: <br> is create wellness and happiness around the world!</h4>
+        <h4 i18n style="line-height: 2.7rem;"><div style="font-size: 4.4rem;display: inline;left: 0.05rem;position: relative;bottom: -0.2rem;">0</div>ur purpose: <br> is create wellness and happiness around the world!</h4>
       </div>
     </div>
     <div class="icons row">
@@ -17,7 +16,7 @@
         <h5 i18n style="line-height: 1.6rem;">Hack your brain<br>+<br>shape your body</h5>
       </div>
       <div class="col-12 col-md-4">
-        <img alt="iconVision" src="assets/logos_icons/Visión.webp" class="svgic" width="110" height="110" style="margin-bottom: -1.9rem;">
+        <img alt="iconVision" src="assets/logos_icons/Visión.webp" class="svgic" width="110" height="110" style="margin-bottom: -1.9rem;position: relative;bottom: 0.8rem;">
         <h3 i18n>Vision:</h3>
         <h5 i18n style="line-height: 2rem;">Let's find the Guud in YOU.<br>Let's Go!</h5>
       </div>
