--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -11,7 +11,7 @@
   </div>
 </div -->
 
-<div [ngClass]="{'displayshadow':_apply}" style="background-color: #70707094; min-height: 89.8vh;">
+<div [ngClass]="{'displayshadow':_apply}" style="background-color: #70707094; height: 111.6vh;">
   <div class="guudvideo">
     <video id="videoplayerhistory" class="videoPlayer azuremediaplayer amp-default-skin" width="innerWidth" height="innerHeight"></video>
   </div>
@@ -26,7 +26,7 @@
             <div class="col-12" i18n style="transform: scale(1.4, 0.9);">BECOME A COACH</div>
           </div>
           <div class="row">
-            <div class="col-6"><img src="assets/logos_icons/AppStore.webp" alt="App Store"></div>
+            <div class="col-6"><a href="https://apps.apple.com/us/app/guud-coach/id6449237809"><img src="assets/logos_icons/AppStore.webp" alt="App Store"></a></div>
             <div class="col-6" style="position: relative;right: 0.7rem;"><img src="assets/logos_icons/Google-Play.webp" alt="Play Store"></div>
           </div>
         </div>
