--- a/src/app/views/aboutus/aboutus.component.html
+++ b/src/app/views/aboutus/aboutus.component.html
@@ -1,4 +1,4 @@
-<div class="displayshadow" style="height:unset;">
+<div class="displayshadow">
   <div class="display col-11 col-lg-12 col-xl-9 col-xxl-7 m-auto">
     <br>
     <div class="row">
