--- a/src/app/views/coach/coach.component.scss
+++ b/src/app/views/coach/coach.component.scss
@@ -1,9 +1,9 @@
 
 .coachbanner {
   position: absolute;
-  bottom: -8rem;
+  bottom: -9.2rem;
   width: 90%;
-  height: 20vh;
+  height: 11.8rem;
   background-color: #000000;
   border-radius: 1.5rem;
   padding: 1rem;
@@ -29,7 +29,7 @@
     width: 34rem;
     color: #ffffff;
     text-align: center;
-    font-size: 5vh;
+    font-size: 3rem;
     img {
       height: 3rem;
     }
