--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -13,7 +13,7 @@
 
 <div [ngClass]="{'displayshadow':_apply}" style="background-color: #70707094; height: 111.6vh;">
   <div class="guudvideo">
-    <video id="videoplayerhistory" class="videoPlayer azuremediaplayer amp-default-skin" width="innerWidth" height="innerHeight"></video>
+    <video id="videoplayerhistory" class="videoPlayer azuremediaplayer amp-default-skin" width="innerWidth" height="innerHeight" webkit-playsinline playsinline></video>
   </div>
   <div class="coachbanner m-auto">
     <img src="assets/logos_icons/Coach-Woman.webp" alt="GUUD Model" id="model">
