--- a/src/app/views/history/history.component.html
+++ b/src/app/views/history/history.component.html
@@ -1,7 +1,7 @@
-<div [ngClass]="{'displayshadow':_apply}" style="background-color: #70707094;height: 87.6vh;">
+<div [ngClass]="{'displayshadow':_apply}" style="background-color: #70707094;">
 
   <div class="guudvideo">
-    <video id="videoplayerhistory" class="videoPlayer azuremediaplayer amp-default-skin" width="innerWidth" height="innerHeight"></video>
+    <video id="videoplayerhistory" class="videoPlayer azuremediaplayer amp-default-skin" width="innerWidth" height="innerHeight" webkit-playsinline playsinline></video>
   </div>
 
 </div>
