--- a/src/assets/guudstyles/_mobile.scss
+++ b/src/assets/guudstyles/_mobile.scss
@@ -101,7 +101,7 @@
     min-height: 97vh;
   }
   .coachbanner{
-    bottom: -14vh !important;
+    //bottom: -14vh !important;
     #app{
       opacity: 0;
     }
