--- a/src/assets/guudstyles/_mobile.scss
+++ b/src/assets/guudstyles/_mobile.scss
@@ -25,8 +25,6 @@
   }
 }
 
-
-
 /*
 .menubar .logo {
   left: 10%;
@@ -98,7 +96,7 @@
   }
   .displayshadow {
     height: unset;
-    min-height: 97vh;
+    min-height: 90vh;
   }
   .coachbanner{
     //bottom: -14vh !important;
@@ -112,6 +110,35 @@
 
 }
 //Hom Specific
+@media (min-width: 811px) and (max-width: 909px) {
+  .homearea {
+    .webdisplay {
+      transform: translateY(4vh);
+    }
+  }
+}
+@media (min-width: 910px) and (max-width: 1030px) {
+  .homearea {
+    .webdisplay {
+      transform: translateY(6vh);
+    }
+  }
+}
+@media (min-width: 1201px) and (max-width: 1440px) {
+  .homearea {
+    .webdisplay {
+      transform: translateY(6vh);
+    }
+  }
+}
+@media (min-width: 1140px) and (max-width: 1200px) {
+  .homearea {
+    .webdisplay {
+      transform: scale(0.9) translateY(3vh);
+    }
+  }
+}
+
 @media (min-width: 810px) and (max-width: 1777px) {
   .homearea {
     translate: 0 1.6rem;
@@ -147,7 +174,9 @@
   }
 }
 @media (max-width: 909px) {
-
+  .displayshadow{
+    min-height: 80vh;
+  }
   guud-footer{
     text-align: center;
   }
