--- a/src/app/views/mainview/mainview.component.html
+++ b/src/app/views/mainview/mainview.component.html
@@ -1,3 +1,5 @@
 <div class="homearea displayshadow">
   <guud-imageplacer></guud-imageplacer>
+
+  <!--img src="assets/images/diseño1-1.png" alt="" style="position: absolute;width: 100%;height: 90%;top: 1rem;z-index: -1;"-->
 </div>
