Cambio de estilos generales y banner de coach ya no se empalma

--- a/src/app/views/coach/coach.component.scss
+++ b/src/app/views/coach/coach.component.scss
@@ -1,12 +1,12 @@
 @media (max-width: 1244px) {
   .displayshadow{
     height: unset !important;
-    min-height: 119vh !important;
+    min-height: 123vh !important;
   }
 }
 .coachbanner {
   position: absolute;
-  bottom: -9.2rem;
+  top: 94vh;
   width: 90%;
   height: 11.8rem;
   background-color: #000000;
