--- a/src/assets/guudstyles/guudstyles.scss
+++ b/src/assets/guudstyles/guudstyles.scss
@@ -35,9 +35,10 @@
 
 .displayshadow {
   box-shadow: inset 0 10px 100px $shadowcolor, inset 0 0 100px $shadowcolor;
-  margin-top: 1.7rem;
-  height: 90vh;
+  //margin-top: 1.7rem;
+  height: 93vh;
   overflow: hidden;
+  position: relative;
 }
 
 .caringdisplay [class*="-display"] img {
