--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -27,7 +27,7 @@
           </div>
           <div class="row">
             <div class="col-6"><a href="https://apps.apple.com/us/app/guud-coach/id6449237809"><img src="assets/logos_icons/AppStore.webp" alt="App Store"></a></div>
-            <div class="col-6" style="position: relative;right: 0.7rem;"><img src="assets/logos_icons/Google-Play.webp" alt="Play Store"></div>
+            <div class="col-6" style="position: relative;right: 0.7rem;"><a href="https://play.google.com/store/apps/details?id=com.garsaholding.guudcoach.dev"><img src="assets/logos_icons/Google-Play.webp" alt="Play Store"></a></div>
           </div>
         </div>
       </div>
