--- a/src/assets/guudstyles/guudstyles.scss
+++ b/src/assets/guudstyles/guudstyles.scss
@@ -3,6 +3,7 @@
 @import '_fonts.scss';
 @import '_inputs.scss';
 @import '_menus.scss';
+@import '_detailgrid.scss';
 
 #socialacc {
   position: absolute;
