--- a/src/app/guudcomponents/menu/topbar/topbar.component.html
+++ b/src/app/guudcomponents/menu/topbar/topbar.component.html
@@ -4,7 +4,7 @@
       <div class="row navigation">
 
         <div class="col-2">
-          <img [routerLink]="'/'" src="assets/logos_icons/logo-Guud.webp" width="160" height="80" alt="Logo" class="logo" i18n-alt i18n-src *ngIf="currentRoute!='/'">
+          <img [routerLink]="'/'" src="assets/logos_icons/logo-Guud.webp" width="160" height="80" alt="Logo" class="logo" i18n-alt i18n-src *ngIf="currentRoute!='/' || isMobile == false">
         </div>
         <div class="col-1 webdisplay" routerLinkActive="activeElement" routerLink="/aboutus"><span i18n>About us</span></div>
         <div class="col-1 webdisplay" routerLinkActive="activeElement" routerLink="/history"><span i18n>History</span></div>
@@ -13,8 +13,8 @@
 
         <div class="col-2 webdisplay">
           <div class="row">
-            <div class="col-6 bluefont" routerLinkActive="activeElement" routerLink="/supplier" style="font-weight:bold;"><span i18n>Supplier</span></div>
-            <div class="col-6 bluefont" routerLinkActive="activeElement" routerLink="/coach" style="font-weight:bold;"><span i18n>Coach</span></div>
+            <div class="col-6 bluefont" routerLinkActive="activeElement" routerLink="/supplier"><span i18n>Supplier</span></div>
+            <div class="col-6 bluefont" routerLinkActive="activeElement" routerLink="/coach"><span i18n>Coach</span></div>
           </div>
         </div>
         <div class="col-2 webdisplay">
