--- a/src/app/views/aboutus/aboutus.component.html
+++ b/src/app/views/aboutus/aboutus.component.html
@@ -28,7 +28,7 @@
     </div>
     <div class="row">
       <div class="col-10 m-auto">
-        <h3 i18n style="text-align: center;font-size: 18vw;">
+        <h3 i18n style="text-align: center;">
           Ps: be GUUD!
         </h3>
       </div>
